<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Properties">

    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="Hello World!" />

    <TextView
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:text="@string/humidity"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/hum"
        android:layout_width="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="wrap_content"
        android:text="@string/temperature"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"/>



    <ImageView
        android:layout_width="121dp"
        android:layout_height="86dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/thermometer" />

    <Button
        android:id="@+id/logout"
        android:text="@string/logout"
        android:layout_width="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/graph_hum"
        android:text="@string/humidity_graph"
        android:layout_width="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/graph_temp"
        android:text="@string/temperature_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>




</LinearLayout>